--- a/Content/card-model.css
+++ b/Content/card-model.css
@@ -95,6 +95,8 @@ body {
 }
 #card-name {
     width: 100%;
+    height: 16px;
+    max-height: 16px;
     font-size: 0.8em;
     border-bottom: 1px #656565 solid; 
     color: #656565;
@@ -103,10 +105,27 @@ body {
     float: right;
     text-align: right;    
 }
-
-
-
-
+#card-text {
+    height: 105px;
+}
+#card-tags {
+    height: 30px;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 0.7em;
+    font-weight: bold;
+}
+#card-footer {
+    font-size: 0.5em;
+}
+#card-footer a {
+    color: #000;
+    text-decoration: none;
+}
+#card-footer-serial {
+    float: right;
+    text-align: right;
+}
 
 
 
